--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
-build/
 .gradle/
+build/
+out/
+classes/
+*.launch
 .idea/
+*.iml
+*.ipr
+*.iws
+.settings/
+.vscode/
+bin/
+.classpath
+.project
+*.DS_Store
 run/
+.gradle
+.apt_generated
+.factorypath
+.settings
+.springBeans
+.sts4-cache
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+.DS_Store
