--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,10 @@
+# Gradle
 org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
-version=1.0.0
+org.gradle.parallel=true
+org.gradle.caching=true
+
+# Loom
+loom.platform=forge
+
+# Mod
+version=1.0.1-SNAPSHOT
