--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Artifacts
-          path: 'build/libs/'
+          path: |
+            forge-1.18.2/build/libs/
+            forge-1.19.4/build/libs/
+            spigot/build/libs/
