--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       - name: 'Make wrapper executable'
         run: chmod +x ./gradlew
       - name: 'Build'
-        run: ./gradlew build
+        run: ./gradlew -Dorg.gradle.daemon=false build --no-daemon
       - name: 'Upload artifacts'
         uses: actions/upload-artifact@v4
         with:
