--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: 'Build'
 on: [ pull_request, push, workflow_dispatch ]
 jobs:
   build:
@@ -6,19 +6,19 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v4
-      - name: 'Validate wrapper'
+      - name: 'Validate Gradle wrapper'
         uses: gradle/wrapper-validation-action@v1
       - name: 'Setup JDK'
         uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'microsoft'
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
       - name: 'Make wrapper executable'
         run: chmod +x ./gradlew
-      - name: 'Build'
-        run: ./gradlew -Dorg.gradle.daemon=false build --no-daemon
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
       - name: 'Upload artifacts'
         uses: actions/upload-artifact@v4
         with:
