--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,11 @@
 version: 2
 updates:
   - package-ecosystem: github-actions
-    directory: /
+    directory: '/'
     schedule:
       interval: daily
   - package-ecosystem: gradle
-    directory: /
+    directory: '/'
     schedule:
       interval: daily
     ignore:
