--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,22 +7,22 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@v4
       - name: 'Validate Gradle wrapper'
-        uses: gradle/wrapper-validation-action@v1
+        uses: gradle/wrapper-validation-action@v2
       - name: 'Setup JDK'
         uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: 'microsoft'
+          distribution: 'temurin'
       - name: 'Make wrapper executable'
-        run: chmod +x ./gradlew
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
+        run: 'chmod +x ./gradlew'
+      - name: 'Setup Gradle'
+        uses: gradle/actions/setup-gradle@v3
+      - name: 'Build'
+        run: './gradlew -Dorg.gradle.daemon=false build --no-daemon'
       - name: 'Upload artifacts'
         uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
+          name: 'Artifacts'
           path: |
             forge-1.18.2/build/libs/
             forge-1.19.4/build/libs/
