--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,54 @@
+# MIT License
+#
+# Copyright (c) 2023-2025 VidTu
+# Copyright (c) 2023-2025 BromineMC
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in all
+# copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
+
 name: 'Build'
 on: [ pull_request, push, workflow_dispatch ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: 'Build'
+    runs-on: ubuntu-24.04
+    timeout-minutes: 30
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@v4
+        timeout-minutes: 1
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
       - name: 'Setup JDK'
-        uses: actions/setup-java@v4
+        timeout-minutes: 1
+        uses: actions/setup-java@3a4f6e1af504cf6a31855fa899c6aa5355ba6c12 # v4.7.0
         with:
           java-version: 17
           distribution: 'temurin'
       - name: 'Setup Gradle'
-        uses: gradle/actions/setup-gradle@v4
+        timeout-minutes: 5
+        uses: gradle/actions/setup-gradle@94baf225fe0a508e581a564467443d0e2379123b # v4.3.0
       - name: 'Build'
-        run: './gradlew -Dorg.gradle.daemon=false build --no-daemon'
-      - name: 'Upload artifacts'
-        uses: actions/upload-artifact@v4
+        timeout-minutes: 30
+        run: './gradlew assemble'
+      - name: 'Upload'
+        timeout-minutes: 5
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
           name: 'Artifacts'
           path: |
