build: More build changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,8 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configureondemand=true
 
 # Loom
 loom.platform=forge
