--- a/forge-1.19.4/src/main/resources/META-INF/mods.toml
+++ b/forge-1.19.4/src/main/resources/META-INF/mods.toml
@@ -2,15 +2,22 @@ modLoader = "javafml"
 loaderVersion = "[1,)"
 license = "MIT"
 issueTrackerURL = "https://github.com/BromineMC/ForgeLegalizer/issues"
+
 [[mods]]
 modId = "forgelegalizer"
 version = "${version}"
 displayName = "ForgeLegalizer"
-updateJSONURL = "https://raw.githubusercontent.com/VidTu/Meta/main/forge_legalizer.json"
-displayURL = "https://github.com/BromineMC/ForgeLegalizer"
-logoFile = "forgelegalizer.png"
-credits = "BromineMC"
-authors = "VidTu, threefusii"
+updateJSONURL = "https://raw.githubusercontent.com/BromineMC/ForgeLegalizer/main/updater_forgelegalizer_forge.json"
+displayURL = "https://modrinth.com/mod/forgelegalizer"
+issueTrackerURL = "https://github.com/BromineMC/ForgeLegalizer/issues"
+catalogueImageIcon = "forgelegalizer_64.png"
+catalogueItemIcon = "minecraft:diamond_sword"
+catalogueBackground = "forgelegalizer_background.png"
+itemIcon = "minecraft:diamond_sword"
+logoFile = "forgelegalizer_240.png"
+credits = "VidTu, threefusii"
+authors = "BromineMC"
+displayTest = "IGNORE_ALL_VERSION"
 description = '''
 This mod fixes issue #9309 in Minecraft Forge that causes extended player attack reach and may lead to problems with anti-cheats.
 This issue affects all Forge version from 1.18.2 through 1.19.4.
@@ -18,3 +25,17 @@ It was fixed in 1.19.4-45.0.39.
 Read more at:
 https://github.com/MinecraftForge/MinecraftForge/issues/9309
 '''
+
+[[dependencies.forgelegalizer]]
+modId = "minecraft"
+type = "required"
+mandatory = true
+versionRange = "1.19.4"
+ordering = "NONE"
+side = "CLIENT"
+
+[modproperties.forgelegalizer]
+catalogueImageIcon = "forgelegalizer_64.png"
+catalogueItemIcon = "minecraft:diamond_sword"
+catalogueBackground = "forgelegalizer_background.png"
+itemIcon = "minecraft:diamond_sword"
