--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,7 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
+org.gradle.configuration-cache.parallel=true
 org.gradle.configureondemand=true
 
 # Loom
