chore(build): Modernize the build

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 .gradle/
-.idea/*
+.idea/**
 build/
+out/
 run/
 !/.idea/codeStyles
 !/.idea/codeStyles/**
 !/.idea/copyright
 !/.idea/copyright/**
+!/.idea/dictionaries
+!/.idea/dictionaries/**
 !/.idea/inspectionProfiles
 !/.idea/inspectionProfiles/**
+!/.idea/modules
+!/.idea/modules/**
+!/.idea/icon.png
+!/.idea/encodings.xml
+!/.idea/modules.xml
