--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,20 +21,19 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-name: 'Build'
+name: 'Build (Main)'
 permissions: {}
 on:
   push:
-    branches: [ '!main' ]
-  pull_request:
+    branches: [ 'main' ]
   workflow_dispatch:
 jobs:
   build:
-    name: 'Build'
+    name: 'Build (Main)'
     runs-on: 'ubuntu-24.04'
     timeout-minutes: 30
     permissions:
-      contents: 'read'
+      contents: 'write'
     steps:
       - name: 'Checkout'
         timeout-minutes: 1
@@ -52,7 +51,7 @@ jobs:
         uses: 'gradle/actions/setup-gradle@8379f6a1328ee0e06e2bb424dadb7b159856a326' # v4.4.0
         with:
           cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
-          dependency-graph: 'generate'
+          dependency-graph: 'generate-and-submit'
       - name: 'Build'
         timeout-minutes: 30
         run: './gradlew assemble'
